@@ -16,6 +16,6 @@ GRanges object
 convert csAnno object to GRanges
 }
 \author{
-Guangchuang Yu \url{http://ygc.name}
+Guangchuang Yu \url{https://guangchuangyu.github.io}
 }
 
