@@ -18,6 +18,6 @@ message
 show method for \code{csAnno} instance
 }
 \author{
-Guangchuang Yu \url{http://ygc.name}
+Guangchuang Yu \url{https://guangchuangyu.github.io}
 }
 
