@@ -19,6 +19,6 @@ plot
 upsetplot method generics
 }
 \author{
-Guangchuang Yu \url{http://ygc.name}
+Guangchuang Yu \url{https://guangchuangyu.github.io}
 }
 
