@@ -25,6 +25,6 @@ vennpie method generics
 vennpie method generics
 }
 \author{
-Guangchuang Yu \url{http://ygc.name}
+Guangchuang Yu \url{https://guangchuangyu.github.io}
 }
 
